Updated GradleROI and Gradle to latest versions, should build with IntelliJ now. Deploy is untested.

--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,49 @@
+import jaci.openrio.gradle.GradleRIOPlugin
+import jaci.openrio.gradle.frc.FRCJavaArtifact
+import jaci.openrio.gradle.frc.RoboRIO
+
 plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2017.1.1"
+    id "jaci.openrio.gradle.GradleRIO" version "2018.01.15"
 }
 
-frc {
-    team = "2928"
-    robotClass = "org.usfirst.frc.team2928.Robot"
+def TEAM = 2928
+def ROBOT_CLASS = "org.usfirst.frc.2928.Robot"
+
+// Define my targets (RoboRIO) and artifacts (deployable files)
+// This is added by GradleRIO's backing project EmbeddedTools.
+deploy {
+    targets {
+        target("roborio", RoboRIO) {
+            team = TEAM
+        }
+    }
+    artifacts {
+        artifact('frcJava', FRCJavaArtifact) {
+            targets << "roborio"
+        }
+    }
 }
 
+// Defining my dependencies. In this case, WPILib (+ friends), CTRE Phoenix (Talon SRX)
+// and NavX.
 dependencies {
     compile wpilib()
-
-    compile fileTree(dir: 'libs', include: '**/*.jar')
-    nativeLib fileTree(dir: 'libs', include: '**/*.so')
+    compile ctre()
+    compile navx()
+    compile openrio.powerup.matchData()
 }
 
-def robotManifest = {
-  attributes 'Main-Class': 'edu.wpi.first.wpilibj.RobotBase'
-  attributes 'Robot-Class': frc.robotClass
-}
-
-jar{
+// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
+// in order to make them all available at runtime. Also adding the manifest so WPILib
+// knows where to look for our Robot Class.
+jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest robotManifest
+    manifest GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.2.1'
+    gradleVersion = '4.4'
 }
