--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,3 @@
-import jaci.openrio.gradle.GradleRIOPlugin
-import jaci.openrio.gradle.frc.FRCJavaArtifact
-import jaci.openrio.gradle.frc.RoboRIO
-
 plugins {
     id "java"
     id "eclipse"
@@ -16,12 +12,12 @@ def ROBOT_CLASS = "org.usfirst.frc.2928.Robot"
 // This is added by GradleRIO's backing project EmbeddedTools.
 deploy {
     targets {
-        target("roborio", RoboRIO) {
+        target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
             team = TEAM
         }
     }
     artifacts {
-        artifact('frcJava', FRCJavaArtifact) {
+        artifact('frcJava', jaci.openrio.gradle.frc.FRCJavaArtifact) {
             targets << "roborio"
         }
     }
@@ -41,7 +37,7 @@ dependencies {
 // knows where to look for our Robot Class.
 jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest GradleRIOPlugin.javaManifest(ROBOT_CLASS)
+    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
 task wrapper(type: Wrapper) {
