--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ deploy {
     targets {
         target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
             team = TEAM
-            timeout = 40
+            addresses << "10.29.28.2"
+            timeout = 10
         }
     }
     artifacts {
