--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2018.01.15"
+    id "jaci.openrio.gradle.GradleRIO" version "2018.03.06"
 }
 
 def TEAM = 2928
@@ -25,6 +25,9 @@ deploy {
     }
 }
 
+wpi {
+    ctreVersion = "5.3.1.0"
+}
 // Defining my dependencies. In this case, WPILib (+ friends), CTRE Phoenix (Talon SRX)
 // and NavX.
 dependencies {
@@ -51,3 +54,4 @@ jar {
 task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
 }
+
